Made the list of quicklinks scrollable by itself. Without the contents of the entire extension scrolling.

--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
   <input type='text' id='codeInput' placeholder='Save QuickLink for this page'>
   <button class='button button-save' id='save'>Save</button>
   <button class='button button-view' id='view'>View All</button>
-  <div id='show'></div>
+  <div id='show' class='list-container'></div>
 
   <script src='popup.js'></script>
 </body>
