Add bad input alerts for no input + already exists Animation included.

--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header class='title'>Quick Links</header>
-  <div id='currentPageLink' class='display-none current-page'></div>
+  <div id='currentPageLink' class='visibility-hidden current-page'></div>
   <form>
     <input type='text' id='codeInput' placeholder='Save QuickLink for this page' autocomplete='off'>
     <button type='submit' class='button button-save' id='save'>Save</button>
